cabal-version:      >=1.10
name:               waitforjs
version:            0.1.0.0
synopsis:           Wait for JavaScript resources to be ready
homepage:           https://github.com/obsidiansystems/waitforjs
bug-reports: https://github.com/obsidiansystems/waitforjs
license:            BSD3
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright: 2022 Obsidian Systems LLC
category:           Web
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules: JSDOM.WaitForJS
    build-depends:    base
                    , jsaddle
                    , jsaddle-dom
                    , lens
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
